fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,12 @@ html{
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
-  width: 105vw;
+  width: 100vw;
   box-shadow: inset 0 -3em 3em rgba(130, 234, 234, 0.1),
     0 0 0 2px rgb(148, 243, 239), 0.3em 0.3em 1em rgba(55, 218, 223, 0.356);
-    height: fit-content;
+    height:auto;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 /* navbar section style***************** */
